welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: ')' expected but ',' found.
while (litMessage!="A","B"){
                      ^BDRBuggle:5: error: illegal start of simple expression
	}
        ^