welcome.lessons.welcome.bdr.BDR.scala.code
while (litMessage!="A","B"){
  recule(1)
}